fixed contact form button on mobile version

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -469,6 +469,7 @@
   }
 
   .contact-form button {
+    margin-bottom: 1rem;
     margin-top: 1rem;
   }
 
